maven/target/classes/META-INF/fabric8/openshift/ocp-demo-cicd-deploymentconfig.yml
---
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    fabric8.io/git-commit: "47ad41456ea44f4ef35f6cd87290b99ac5c6c45e"
    fabric8.io/iconUrl: "img/icons/camel.svg"
    fabric8.io/git-branch: "master"
    fabric8.io/metrics-path: "dashboard/file/camel-routes.json/?var-project=ocp-demo-cicd&var-version=0.1.0-SNAPSHOT"
  labels:
    expose: "true"
    promotion-group: "ocp-demo-cicd"
    provider: "fabric8"
    project: "ocp-demo-cicd"
    version: "0.1.0-SNAPSHOT"
    group: "com.github.buuhsmead"
  name: "ocp-demo-cicd"
spec:
  replicas: 1
  selector:
    project: "ocp-demo-cicd"
    provider: "fabric8"
    group: "com.github.buuhsmead"
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: "Rolling"
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: "47ad41456ea44f4ef35f6cd87290b99ac5c6c45e"
        fabric8.io/iconUrl: "img/icons/camel.svg"
        fabric8.io/git-branch: "master"
        fabric8.io/metrics-path: "dashboard/file/camel-routes.json/?var-project=ocp-demo-cicd&var-version=0.1.0-SNAPSHOT"
      labels:
        provider: "fabric8"
        project: "ocp-demo-cicd"
        version: "0.1.0-SNAPSHOT"
        group: "com.github.buuhsmead"
    spec:
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        - name: "JAVA_APP_DIR"
          value: "/deployments"
        image: "ocp-demo-cicd:latest"
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: "/health"
            port: 8081
          initialDelaySeconds: 180
        name: "spring-boot"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        - containerPort: 9779
          name: "prometheus"
          protocol: "TCP"
        - containerPort: 8778
          name: "jolokia"
          protocol: "TCP"
        readinessProbe:
          httpGet:
            path: "/health"
            port: 8081
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "512Mi"
        securityContext:
          privileged: false
  triggers:
  - type: "ConfigChange"
  - imageChangeParams:
      automatic: true
      containerNames:
      - "spring-boot"
      from:
        kind: "ImageStreamTag"
        name: "ocp-demo-cicd:latest"
    type: "ImageChange"
