maven/target/classes/META-INF/fabric8/openshift/ocp-demo-cicd-route.yml
---
apiVersion: "v1"
kind: "Route"
metadata:
  labels:
    expose: "true"
    promotion-group: "ocp-demo-cicd"
    provider: "fabric8"
    project: "ocp-demo-cicd"
    version: "0.1.0-SNAPSHOT"
    group: "com.github.buuhsmead"
  name: "ocp-demo-cicd"
spec:
  port:
    targetPort: "http"
  tls:
    insecureEdgeTerminationPolicy: "Redirect"
    termination: "edge"
  to:
    kind: "Service"
    name: "ocp-demo-cicd"
    weight: 100
